# gtm-search

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/api_service/: __init__.py  main.py
apps/api_service/routers/: __init__.py  companies.py  jobs.py  search.py  skills.py
apps/web_ui/: package-lock.json  package.json
apps/web_ui/src/app/: globals.css  layout.tsx  page.tsx
apps/web_ui/src/app/analytics/: page.tsx
apps/web_ui/src/app/companies/: page.tsx
apps/web_ui/src/app/companies/[id]/: page.tsx
apps/web_ui/src/app/jobs/: page.tsx
apps/web_ui/src/app/jobs/[id]/: page.tsx
apps/web_ui/src/app/saved-searches/: page.tsx
apps/web_ui/src/components/: Sidebar.tsx
infra/: Dockerfile.nextjs  Dockerfile.python  docker-compose.yml
scripts/: create_mv_stats.py  generate_report.py  run_celery_extract.py  run_celery_ingest.py  run_extract.py  run_ingest.py  seed_skills.py  validate.py
seed/: seed_companies.json  skills_seed.json
services/discovery_service/: cdx_client.py  tasks.py
shared/: __init__.py
shared/db/: alembic.ini  session.py
shared/db/migrations/: env.py
shared/db/migrations/versions/: 001_initial.py  002_add_search_indexes.py
shared/models/: __init__.py  base.py  company.py  job.py  skill.py
shared/utils/: __init__.py  celery_app.py  config.py  logging.py  rate_limiter.py
workers/extractor_worker/: __init__.py  llm_client.py  skill_mapper.py  tasks.py  text_cleaner.py
workers/scraper_worker/: __init__.py  http_client.py  scrapers.py  storage.py  tasks.py
